--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
@@ -18,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "zod": "^4.1.8"
   },
